test/files/neg/t6920.check
t6920.scala:9: error: too many arguments (found 2, expected 1) for method applyDynamicNamed: (values: Seq[(String, Any)]): String
error after rewriting to CompilerError.this.test.applyDynamicNamed("crushTheCompiler")(scala.Tuple2("a", 1), scala.Tuple2("b", 2))
possible cause: maybe a wrong Dynamic method signature?
  test.crushTheCompiler(a = 1, b = 2)
                               ^
1 error
